--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxtjs/google-fonts": "3.1.3",
     "@nuxtjs/tailwindcss": "6.8.0",
     "@types/node": "18.16.19",
     "nuxt": "3.5.2"
+  },
+  "dependencies": {
+    "@iconify-json/mdi": "1.1.64",
+    "@nuxt/ui": "2.12.3"
   }
 }
