--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxtjs/google-fonts": "3.1.3",
+    "@nuxtjs/i18n": "8.0.0",
     "@nuxtjs/tailwindcss": "6.8.0",
     "@types/node": "18.16.19",
     "nuxt": "3.5.2"
   },
   "dependencies": {
     "@iconify-json/mdi": "1.1.64",
+    "@iconify-json/twemoji": "1.1.15",
     "@nuxt/ui": "2.12.3"
   }
 }
