--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxtjs/eslint-module": "4.1.0",
     "@nuxtjs/google-fonts": "3.1.3",
     "@nuxtjs/i18n": "8.0.0",
     "@nuxtjs/tailwindcss": "6.8.0",
     "@types/node": "18.16.19",
+    "eslint": "8.56.0",
     "nuxt": "3.5.2"
   },
   "dependencies": {
