--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
-    "@nuxtjs/eslint-module": "4.1.0",
+    "@nuxt/eslint-config": "0.2.0",
     "@nuxtjs/google-fonts": "3.1.3",
     "@nuxtjs/i18n": "8.0.0",
     "@nuxtjs/tailwindcss": "6.8.0",
