--- a/package.json
+++ b/package.json
@@ -1,22 +1,31 @@
 {
   "name": "luweslen",
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "test:unit:watch": "vitest",
+    "test:unit": "vitest run"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxt/eslint-config": "0.2.0",
+    "@nuxt/test-utils": "3.11.0",
     "@nuxtjs/google-fonts": "3.1.3",
     "@nuxtjs/i18n": "8.0.0",
     "@nuxtjs/tailwindcss": "6.8.0",
+    "@testing-library/vue": "8.0.1",
     "@types/node": "18.16.19",
+    "@vue/test-utils": "2.4.4",
     "eslint": "8.56.0",
-    "nuxt": "3.5.2"
+    "happy-dom": "13.3.1",
+    "nuxt": "3.9.3",
+    "playwright-core": "1.41.1",
+    "vitest": "1.2.2"
   },
   "dependencies": {
     "@iconify-json/mdi": "1.1.64",
