--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -6,88 +6,16 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Read .nvmrc
-      run: echo "NVMRC=$(cat .nvmrc)" >> $GITHUB_OUTPUT
-      id: nvm
-
-    - name: Use Node.js ${{ steps.nvm.outputs.NVMRC }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ steps.nvm.outputs.NVMRC }}
-
-    - name: Active corepack
-      run: |
-        corepack enable
-
-    - name: Install dependencies
-      run: |
-        yarn
-
-    - name: Build
-      run: |
-        yarn build
-
+    uses: ./.github/workflows/install-dependencies.yml
+    with:
+      command: yarn build
+        
   eslint:
-    runs-on: ubuntu-latest
-    needs: [build]
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Read .nvmrc
-      run: echo "NVMRC=$(cat .nvmrc)" >> $GITHUB_OUTPUT
-      id: nvm
-
-    - name: Use Node.js ${{ steps.nvm.outputs.NVMRC }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ steps.nvm.outputs.NVMRC }}
-
-    - name: Active corepack
-      run: |
-        corepack enable
-
-    - name: Install dependencies
-      run: |
-        yarn
-
-    - name: Run ESLint
-      run: yarn lint
-      env:
-        CI: true
-        ESLINT_CONFIG: .eslintrc.json
+    uses: ./.github/workflows/install-dependencies.yml
+    with:
+      command: yarn lint
 
   unit-test:
-    runs-on: ubuntu-latest
-    needs: [build]
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Read .nvmrc
-      run: echo "NVMRC=$(cat .nvmrc)" >> $GITHUB_OUTPUT
-      id: nvm
-
-    - name: Use Node.js ${{ steps.nvm.outputs.NVMRC }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ steps.nvm.outputs.NVMRC }}
-
-    - name: Active corepack
-      run: |
-        corepack enable
-
-    - name: Install dependencies
-      run: |
-        yarn
-
-    - name: Run unit tests
-      run: yarn test:unit
+    uses: ./.github/workflows/install-dependencies.yml
+    with:
+      command: yarn test
